--- a/css/header.css
+++ b/css/header.css
@@ -12,17 +12,21 @@ li {
     list-style: none;
 }
 
+ul {
+    padding-left: 0;
+}
+
 img {
     cursor: pointer;
 }
 
-#header {
+#header-item {
+    display: flex;
+    position: absolute;
+    top: 0;
+    z-index: 999;
     flex-direction: column;
     width: 100%;
-}
-
-.display-flex {
-    display: flex;
 }
 
 .top-banner {
@@ -33,25 +37,31 @@ img {
 }
 
 .header {
+    display: flex;
     flex-direction: row;
     align-items: start;
     width: 100%;
     margin-top: 10px;
+    background-color: #FFFFFF; /* 추가 */
 }
 
 .header a img {
     width: 214px;
     height: 100%;
-    margin: 0 30px;
+    margin: 10px 30px;
 }
 
-.main-title {
+.main-menu-title {
     display: flex;
     justify-content: center;
     flex-grow: 1;
     text-align: center;
     font-size: 20px;
     margin: 30px 0 0 0;
+}
+
+.my-menu {
+    display: flex;
 }
 
 .main-menu>li {
@@ -119,7 +129,7 @@ img {
     .top-banner {
         height:10px;
     }
-    .top-banner p , .main-menu , .user-icon{
+    .media-none , .main-menu , .user-icon{
         display: none;
     }
     .my-menu {
@@ -130,4 +140,12 @@ img {
         margin: 22px 30px;
     }
 
+}
+@media screen and (max-width:768px) {
+    .header a img {
+        width: 180px;
+    }
+    .menu-icon {
+        margin: 14px 30px;
+    }
 }
